[gd_scene load_steps=17 format=3 uid="uid://d2j3rg4f5xnau"]

[ext_resource type="PackedScene" uid="uid://beqshfus1kkk7" path="res://screens/night_menu/store/shopkeeper/shopkeeper.tscn" id="2_ra0ww"]
[ext_resource type="Script" path="res://screens/night_menu/store/night_shop.gd" id="2_xiblk"]
[ext_resource type="Theme" uid="uid://b3qy32ccw0g8o" path="res://ui/ui_theme.tres" id="4_3akkn"]
[ext_resource type="PackedScene" uid="uid://clypnxql0jkdx" path="res://screens/night_menu/store/ingredient_display/ingredient_display.tscn" id="4_47emv"]
[ext_resource type="Texture2D" uid="uid://dkhqpfitnde45" path="res://screens/night_menu/store/counter.png" id="5_67t3k"]
[ext_resource type="Texture2D" uid="uid://b4pn4skdeludu" path="res://screens/night_menu/store/basket_back.png" id="6_1oriv"]
[ext_resource type="Texture2D" uid="uid://bpjb84u8xfjkw" path="res://screens/night_menu/store/shelf.png" id="6_fachu"]
[ext_resource type="Texture2D" uid="uid://cqaeqtiivdqj2" path="res://screens/night_menu/store/basket_front.png" id="7_0pryx"]
[ext_resource type="PackedScene" uid="uid://dq807i88ymk0c" path="res://screens/night_menu/store/station_display/station_display.tscn" id="7_u5ofj"]
[ext_resource type="PackedScene" uid="uid://hqh6cclivhet" path="res://screens/night_menu/store/map_display/map_display.tscn" id="8_17nol"]
[ext_resource type="Theme" uid="uid://bbilaxa656p7n" path="res://screens/main/customers/customer_dialogue_theme.tres" id="9_yqeli"]
[ext_resource type="Texture2D" uid="uid://crbl2qwkavqgq" path="res://screens/main/customers/speech_bubble_pointer.png" id="10_0af1q"]
[ext_resource type="AudioStream" uid="uid://beydu1xu4bbgm" path="res://common/audio/Night_Market.wav" id="11_gn7bv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hof1g"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_nx75c"]
a = Vector2(103, 50)
b = Vector2(-216, 49)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_f1ved"]
a = Vector2(-344, -82)
b = Vector2(-525, 53)

[node name="NightShop" type="Node2D"]
script = ExtResource("2_xiblk")

[node name="Background" type="Panel" parent="."]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1931.0
offset_bottom = 1089.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_hof1g")

[node name="BackgroundLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="UiLayer" type="CanvasLayer" parent="."]
layer = 0

[node name="Counter" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(1542.47, 848.809)
scale = Vector2(8.19866, 7.00546)
texture = ExtResource("5_67t3k")

[node name="Shelf" type="Sprite2D" parent="."]
position = Vector2(446.686, 383)
scale = Vector2(7.43988, 7.20052)
texture = ExtResource("6_fachu")

[node name="Shelf2" type="Sprite2D" parent="."]
position = Vector2(446, 190)
scale = Vector2(5.62264, 7.20052)
texture = ExtResource("6_fachu")

[node name="Shelf3" type="Sprite2D" parent="."]
position = Vector2(442, 586)
scale = Vector2(5.62264, 7.20052)
texture = ExtResource("6_fachu")

[node name="Shelf4" type="Sprite2D" parent="."]
position = Vector2(454, 880)
scale = Vector2(7.43988, 7.20052)
texture = ExtResource("6_fachu")

[node name="Shopkeeper" parent="." instance=ExtResource("2_ra0ww")]
position = Vector2(1559, 361)
scale = Vector2(8, 8)

[node name="LocationShelf" type="Node2D" parent="."]
process_mode = 3
physics_interpolation_mode = 1
position = Vector2(447, 384)

[node name="IngredientDisplay1" parent="LocationShelf" instance=ExtResource("4_47emv")]
position = Vector2(-200, -192)

[node name="IngredientDisplay2" parent="LocationShelf" instance=ExtResource("4_47emv")]
process_mode = 3
physics_interpolation_mode = 1
position = Vector2(0, -192)

[node name="IngredientDisplay3" parent="LocationShelf" instance=ExtResource("4_47emv")]
position = Vector2(200, -192)

[node name="IngredientDisplay4" parent="LocationShelf" instance=ExtResource("4_47emv")]
position = Vector2(-296, 0)

[node name="IngredientDisplay5" parent="LocationShelf" instance=ExtResource("4_47emv")]
position = Vector2(-96, 0)

[node name="IngredientDisplay6" parent="LocationShelf" instance=ExtResource("4_47emv")]
position = Vector2(104, 0)

[node name="IngredientDisplay7" parent="LocationShelf" instance=ExtResource("4_47emv")]
position = Vector2(304, 0)

[node name="IngredientDisplay8" parent="LocationShelf" instance=ExtResource("4_47emv")]
position = Vector2(-200, 200)

[node name="IngredientDisplay9" parent="LocationShelf" instance=ExtResource("4_47emv")]
position = Vector2(0, 200)

[node name="IngredientDisplay10" parent="LocationShelf" instance=ExtResource("4_47emv")]
position = Vector2(200, 200)

[node name="ExoticShelf" type="Node2D" parent="."]
position = Vector2(455, 878)

[node name="IngredientDisplay1" parent="ExoticShelf" instance=ExtResource("4_47emv")]
position = Vector2(-304, 2)

[node name="IngredientDisplay2" parent="ExoticShelf" instance=ExtResource("4_47emv")]
position = Vector2(-104, 2)

[node name="IngredientDisplay3" parent="ExoticShelf" instance=ExtResource("4_47emv")]
position = Vector2(96, 2)

[node name="IngredientDisplay4" parent="ExoticShelf" instance=ExtResource("4_47emv")]
position = Vector2(296, 2)

[node name="Basket" type="Node2D" parent="."]
position = Vector2(1573, 917)

[node name="BasketBack" type="Sprite2D" parent="Basket"]
z_index = -1
position = Vector2(6, -43)
scale = Vector2(12, 12)
texture = ExtResource("6_1oriv")

[node name="BasketFront" type="Sprite2D" parent="Basket"]
z_index = 1
position = Vector2(6, -43)
scale = Vector2(12, 12)
texture = ExtResource("7_0pryx")

[node name="PurchaseArea" type="Area2D" parent="Basket"]

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Basket/PurchaseArea"]
process_mode = 4
position = Vector2(5.5, -40.75)
polygon = PackedVector2Array(-334.5, -46.25, -230.5, -441.25, 257.5, -439.25, 334.5, -29.25, 265.5, 51.75, 150.5, 105.75, 1.5, 118.75, -152.5, 103.75, -261.5, 54.75)

[node name="WallCollider" type="StaticBody2D" parent="Basket"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Basket/WallCollider"]
position = Vector2(61, 4)
shape = SubResource("SegmentShape2D_nx75c")
debug_color = Color(0.544544, 0.00127623, 0.706111, 0.42)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Basket/WallCollider"]
position = Vector2(189, -31)
scale = Vector2(1, -1)
shape = SubResource("SegmentShape2D_f1ved")
debug_color = Color(0.544544, 0.00127623, 0.706111, 0.42)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Basket/WallCollider"]
position = Vector2(690, 0)
shape = SubResource("SegmentShape2D_f1ved")
debug_color = Color(0.544544, 0.00127623, 0.706111, 0.42)

[node name="StationDisplay" parent="." instance=ExtResource("7_u5ofj")]
position = Vector2(1199, 628)

[node name="MapDisplay" parent="." instance=ExtResource("8_17nol")]
visible = false
position = Vector2(1204, 620)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.823529, 0.823529, 0.823529, 1)

[node name="PlayerMoneyPanelContainer" type="PanelContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = 1801.0
offset_top = 24.0
offset_right = 1896.0
offset_bottom = 77.0
grow_horizontal = 0
mouse_filter = 2
theme = ExtResource("4_3akkn")

[node name="PlayerMoneyMarginContainer" type="MarginContainer" parent="PlayerMoneyPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="PlayerMoneyLabel" type="Label" parent="PlayerMoneyPanelContainer/PlayerMoneyMarginContainer"]
layout_mode = 2
text = "$60"

[node name="TotalCostPanelContainer" type="PanelContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1677.0
offset_top = 1003.0
offset_right = 1896.0
offset_bottom = 1056.0
grow_horizontal = 0
grow_vertical = 0
mouse_filter = 2
theme = ExtResource("4_3akkn")

[node name="TotalCostMarginContainer" type="MarginContainer" parent="TotalCostPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="TotalCostLabel" type="Label" parent="TotalCostPanelContainer/TotalCostMarginContainer"]
layout_mode = 2
text = "Total Cost: $0"

[node name="ExitButton" type="Button" parent="."]
offset_left = 8.0
offset_top = 8.0
offset_right = 90.0
offset_bottom = 39.0
text = "Exit Store"

[node name="BuyButton" type="Button" parent="."]
offset_left = 1493.0
offset_top = 1015.0
offset_right = 1642.0
offset_bottom = 1046.0
text = "Buy Cart Contents"

[node name="SpeechBubble" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DialogueLabel" type="Label" parent="SpeechBubble"]
layout_mode = 0
offset_left = 976.0
offset_top = 102.0
offset_right = 1358.0
offset_bottom = 179.0
theme = ExtResource("9_yqeli")
text = "Hi :)"
horizontal_alignment = 1

[node name="PointerRect" type="TextureRect" parent="SpeechBubble"]
layout_mode = 0
offset_left = 1258.0
offset_top = 173.0
offset_right = 1392.0
offset_bottom = 277.0
texture = ExtResource("10_0af1q")
expand_mode = 1

[node name="Music_Player" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_gn7bv")
volume_db = -15.0

[node name="Buy_Sound_Effect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_gn7bv")
volume_db = -15.0

[connection signal="ingredient_dropped" from="LocationShelf/IngredientDisplay1" to="." method="_on_ingredient_dropped"]
[connection signal="ingredient_dropped" from="LocationShelf/IngredientDisplay2" to="." method="_on_ingredient_dropped"]
[connection signal="ingredient_dropped" from="LocationShelf/IngredientDisplay3" to="." method="_on_ingredient_dropped"]
[connection signal="ingredient_dropped" from="LocationShelf/IngredientDisplay4" to="." method="_on_ingredient_dropped"]
[connection signal="ingredient_dropped" from="LocationShelf/IngredientDisplay5" to="." method="_on_ingredient_dropped"]
[connection signal="ingredient_dropped" from="LocationShelf/IngredientDisplay6" to="." method="_on_ingredient_dropped"]
[connection signal="ingredient_dropped" from="LocationShelf/IngredientDisplay7" to="." method="_on_ingredient_dropped"]
[connection signal="ingredient_dropped" from="LocationShelf/IngredientDisplay8" to="." method="_on_ingredient_dropped"]
[connection signal="ingredient_dropped" from="LocationShelf/IngredientDisplay9" to="." method="_on_ingredient_dropped"]
[connection signal="ingredient_dropped" from="LocationShelf/IngredientDisplay10" to="." method="_on_ingredient_dropped"]
[connection signal="ingredient_dropped" from="ExoticShelf/IngredientDisplay1" to="." method="_on_ingredient_dropped"]
[connection signal="ingredient_dropped" from="ExoticShelf/IngredientDisplay2" to="." method="_on_ingredient_dropped"]
[connection signal="ingredient_dropped" from="ExoticShelf/IngredientDisplay3" to="." method="_on_ingredient_dropped"]
[connection signal="ingredient_dropped" from="ExoticShelf/IngredientDisplay4" to="." method="_on_ingredient_dropped"]
[connection signal="body_entered" from="Basket/PurchaseArea" to="." method="_on_body_entered_basket"]
[connection signal="body_exited" from="Basket/PurchaseArea" to="." method="_on_body_exited_basket"]
[connection signal="shopkeeper_speak" from="StationDisplay" to="." method="shopkeeper_speak"]
[connection signal="update_money_label" from="StationDisplay" to="." method="_on_map_or_station_purchased"]
[connection signal="shopkeeper_speak" from="MapDisplay" to="." method="shopkeeper_speak"]
[connection signal="update_money_label" from="MapDisplay" to="." method="_on_map_or_station_purchased"]
[connection signal="pressed" from="ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="BuyButton" to="." method="_on_buy_button_pressed"]
